compiler/testData/diagnostics/tests/declarationChecks/LocalVariableWithNoTypeInformation.kt
fun test() {
    val <!UNUSED_VARIABLE, VARIABLE_WITH_NO_TYPE_NO_INITIALIZER!>a<!>
}
